refactor: Influx 태그 일치 및 Repository 수정